# api_service

./: Dockerfile  README.md  base.db  docker-compose.yml
api_service/: Dockerfile  base.db  base.db-journal  client.py  docker-compose.yml  main.py  models.py  pyproject.toml
api_service/api_service/: base.sqlite  client.py  create_database.py  database.py  main.py  models.py
